Fix "Book Stored" items' box shadows collapsing w/ borders

--- a/src/stylesheets/styles.css
+++ b/src/stylesheets/styles.css
@@ -126,6 +126,7 @@ main > section {
     box-sizing: border-box;
     overflow: auto;
     align-items: stretch;
+    padding: 10px;
 }
 
 .book-list li {
